# AAJN_RobotFramework-PythonStackTrace

./: .gitignore  LICENSE  README.md  pyproject.toml  tasks.py
.github/workflows/: python-package.yml  rf-compatibility.yml
PythonStackTracer/: __init__.py
atest/: common.resource  example_cases.robot  multiple_traces.robot  no_trace.robot  single_trace.robot
atest_data/: ExceptionalLibrary.py  arguments.txt  example.robot  failing_suite_setup.robot  failing_suite_teardown.robot  two_failing.robot
